--- a/department-service.properties
+++ b/department-service.properties
@@ -18,3 +18,5 @@ eureka.instance.hostname=localhost
 #eureka.instance.prefer-ip-address=true
 #eureka.instance.instance-id=${spring.cloud.client.ip-address}:${server.port}
 #eureka.instance.hostname=${spring.cloud.client.ip-address}
+
+spring.boot.message = Hello, Department Service
