--- a/employee-service.properties
+++ b/employee-service.properties
@@ -17,3 +17,5 @@ eureka.instance.hostname=localhost
 #eureka.instance.prefer-ip-address=true
 #eureka.instance.instance-id=${spring.cloud.client.ip-address}:${server.port}
 #eureka.instance.hostname=${spring.cloud.client.ip-address}
+
+spring.boot.message = Hello, Employee Service
