--- a/department-service.properties
+++ b/department-service.properties
@@ -19,4 +19,4 @@ eureka.instance.hostname=localhost
 #eureka.instance.instance-id=${spring.cloud.client.ip-address}:${server.port}
 #eureka.instance.hostname=${spring.cloud.client.ip-address}
 
-spring.boot.message = Hello, Department Service Updated
+spring.boot.message = Hello, Department Service Spring Cloud BUS Demo
