--- a/employee-service.properties
+++ b/employee-service.properties
@@ -18,4 +18,4 @@ eureka.instance.hostname=localhost
 #eureka.instance.instance-id=${spring.cloud.client.ip-address}:${server.port}
 #eureka.instance.hostname=${spring.cloud.client.ip-address}
 
-spring.boot.message = Hello, Employee Service
+spring.boot.message = Hello, Employee Service Spring Cloud BUS DEMO2
