--- a/employee-service.properties
+++ b/employee-service.properties
@@ -1,13 +1,13 @@
 # Oracle Properties
-#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:mydb
-#spring.datasource.username=demo_db
-#spring.datasource.password=demo_dbpassword!
-#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:mydb
+spring.datasource.username=demo_db
+spring.datasource.password=demo_dbpassword!
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 
 server.port=8081
 
