--- a/employee-service.properties
+++ b/employee-service.properties
@@ -1,7 +1,7 @@
 # Oracle Properties
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:mydb
-spring.datasource.username=demo_db
-spring.datasource.password=demo_dbpassword!
+spring.datasource.username=employee_db
+spring.datasource.password=employee_db!!
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 spring.jpa.hibernate.ddl-auto=update
