--- a/department-service.properties
+++ b/department-service.properties
@@ -1,8 +1,8 @@
 # Oracle Properties
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:mydb
-spring.datasource.username=department_db
-spring.datasource.password=department_db!!
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:mydb
+#spring.datasource.username=department_db
+#spring.datasource.password=department_db!!
+#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
