--- a/department-service.properties
+++ b/department-service.properties
@@ -4,6 +4,12 @@
 #spring.datasource.password=department_db!!
 #spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
+# MySQL Properties
+spring.datasource.url=jdbc:mysql://localhost:3306/department_db
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
