--- a/employee-service.properties
+++ b/employee-service.properties
@@ -1,13 +1,19 @@
 # Oracle Properties
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:mydb
-spring.datasource.username=employee_db
-spring.datasource.password=employee_db!!
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:mydb
+#spring.datasource.username=employee_db
+#spring.datasource.password=employee_db!!
+#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
+
+# MySQL Properties
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_db
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 
 server.port=8081
 
