--- a/organization-service.properties
+++ b/organization-service.properties
@@ -1,8 +1,14 @@
 # Oracle Properties
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:mydb
-spring.datasource.username=organization_db
-spring.datasource.password=organization_db!!
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:mydb
+#spring.datasource.username=organization_db
+#spring.datasource.password=organization_db!!
+#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+# MySQL Properties
+spring.datasource.url=jdbc:mysql://localhost:3306/organization_db
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
