--- a/organization-service.properties
+++ b/organization-service.properties
@@ -3,6 +3,7 @@
 #spring.datasource.username=organization_db
 #spring.datasource.password=organization_db!!
 #spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 
 # MySQL Properties
 spring.datasource.url=jdbc:mysql://localhost:3306/organization_db
@@ -13,7 +14,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 
 server.port=8083
 
