--- a/department-service.properties
+++ b/department-service.properties
@@ -6,7 +6,7 @@
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 
 # MySQL Properties
-spring.datasource.url=jdbc:mysql://localhost:3306/department_db
+spring.datasource.url=jdbc:mysql://localhost:3306/department_db?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
