--- a/department-service.properties
+++ b/department-service.properties
@@ -7,6 +7,7 @@
 
 # MySQL Properties
 spring.datasource.url=jdbc:mysql://localhost:3306/department_db?useSSL=false&serverTimezone=UTC
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
