--- a/department-service.properties
+++ b/department-service.properties
@@ -8,6 +8,7 @@
 # MySQL Properties
 spring.datasource.url=jdbc:mysql://localhost:3306/department_db
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.initialize: false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
