--- a/department-service.properties
+++ b/department-service.properties
@@ -11,7 +11,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/department_db
 spring.datasource.initialize: false
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
