--- a/department-service.properties
+++ b/department-service.properties
@@ -1,16 +1,16 @@
 # Oracle Properties
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:mydb
-spring.datasource.username=department_db
-spring.datasource.password=department_db!!
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:mydb
+#spring.datasource.username=department_db
+#spring.datasource.password=department_db!!
+#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 
 # MySQL Properties
-#spring.datasource.url=jdbc:mysql://localhost:3306/department_db
-#spring.datasource.initialize: false
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.datasource.url=jdbc:mysql://localhost:3306/department_db
+spring.datasource.initialize: false
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
