--- a/department-service.properties
+++ b/department-service.properties
@@ -6,11 +6,10 @@
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 
 # MySQL Properties
-spring.datasource.url=jdbc:mysql://localhost:3306/department_db
-spring.datasource.initialize: false
+spring.datasource.url=jdbc:mysql://localhost:3306/department_db?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
