--- a/department-service.properties
+++ b/department-service.properties
@@ -6,9 +6,10 @@
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 
 # MySQL Properties
-spring.datasource.url=jdbc:mysql://localhost:3306/department_db?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/department_db
 spring.datasource.username=root
 spring.datasource.password=root
+pring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 spring.jpa.hibernate.ddl-auto=update
