--- a/department-service.properties
+++ b/department-service.properties
@@ -9,7 +9,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/department_db
 spring.datasource.username=root
 spring.datasource.password=root
-pring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+#pring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 spring.jpa.hibernate.ddl-auto=update
