--- a/organization-service.properties
+++ b/organization-service.properties
@@ -9,6 +9,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/organization_db
 spring.datasource.username=root
 spring.datasource.password=root
+#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 spring.jpa.hibernate.ddl-auto=update
