--- a/employee-service.properties
+++ b/employee-service.properties
@@ -9,7 +9,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_db
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
