--- a/department-service.properties
+++ b/department-service.properties
@@ -6,15 +6,17 @@
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 
 # MySQL Properties
-spring.datasource.url=jdbc:mysql://localhost:3306/department_db
-spring.datasource.username=root
-spring.datasource.password=root
-#pring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://mysqldb-department-service:3306/department_db
+spring.datasource.username=department
+spring.datasource.password=department
+#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+#spring.sql.init.mode=always
+#spring.datasource.initialization-mode=always
 
 server.port=9190
 
