--- a/department-service.properties
+++ b/department-service.properties
@@ -6,6 +6,7 @@
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 
 # MySQL Properties
+#spring.datasource.url=jdbc:mysql://localhost:3306/department_db
 spring.datasource.url=jdbc:mysql://mysqldb-department-service:3306/department_db
 spring.datasource.username=department
 spring.datasource.password=department
@@ -21,7 +22,8 @@ spring.jpa.properties.hibernate.format_sql=true
 server.port=9190
 
 management.endpoints.web.exposure.include=*
-eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+#eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+eureka.instance.client.serverUrl.defaultZone=http://service-registry:8761/eureka/
 
 eureka.instance.hostname=localhost
 #eureka.instance.prefer-ip-address=true
