--- a/department-service.properties
+++ b/department-service.properties
@@ -7,7 +7,7 @@
 
 # MySQL Properties
 #spring.datasource.url=jdbc:mysql://localhost:3306/department_db
-spring.datasource.url=jdbc:mysql://mysqldb-department-service:3306/department_db
+spring.datasource.url=jdbc:mysql://mysqldb-department:3306/department_db
 spring.datasource.username=department
 spring.datasource.password=department
 #spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
@@ -23,9 +23,12 @@ server.port=9190
 
 management.endpoints.web.exposure.include=*
 #eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
-eureka.instance.client.serverUrl.defaultZone=http://service-registry:8761/eureka/
+eureka.client.service-url.defaultZone=http://service-registry:8761/eureka/
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
 
-eureka.instance.hostname=localhost
+#eureka.instance.hostname=localhost
+eureka.instance.hostname=service-registry
 #eureka.instance.prefer-ip-address=true
 #eureka.instance.instance-id=${spring.cloud.client.ip-address}:${server.port}
 #eureka.instance.hostname=${spring.cloud.client.ip-address}
