--- a/department-service.properties
+++ b/department-service.properties
@@ -6,11 +6,13 @@
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 
 # MySQL Properties
-spring.datasource.url=jdbc:mysql://localhost:3306/department_db
-#spring.datasource.url=jdbc:mysql://mysqldb-department:3306/department_db
-spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#spring.datasource.url=jdbc:mysql://localhost:3306/department_db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://mysqldb-department:3306/department_db?createDatabaseIfNotExist=true
+spring.datasource.username=department
+spring.datasource.password=department
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 #spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
