--- a/department-service.properties
+++ b/department-service.properties
@@ -24,13 +24,13 @@ spring.jpa.properties.hibernate.format_sql=true
 server.port=9190
 
 management.endpoints.web.exposure.include=*
-eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
-#eureka.client.service-url.defaultZone=http://service-registry:8761/eureka/
+#eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://service-registry:8761/eureka/
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 
-eureka.instance.hostname=localhost
-#eureka.instance.hostname=service-registry
+#eureka.instance.hostname=localhost
+eureka.instance.hostname=service-registry
 
 #eureka.instance.prefer-ip-address=true
 #eureka.instance.instance-id=${spring.cloud.client.ip-address}:${server.port}
