--- a/department-service.properties
+++ b/department-service.properties
@@ -6,10 +6,10 @@
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 
 # MySQL Properties
-#spring.datasource.url=jdbc:mysql://localhost:3306/department_db?createDatabaseIfNotExist=true
-spring.datasource.url=jdbc:mysql://mysqldb-department:3306/department_db?createDatabaseIfNotExist=true
-spring.datasource.username=department
-spring.datasource.password=department
+spring.datasource.url=jdbc:mysql://localhost:3306/department_db?createDatabaseIfNotExist=true
+#spring.datasource.url=jdbc:mysql://mysqldb-department:3306/department_db?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=root
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
@@ -24,13 +24,13 @@ spring.jpa.properties.hibernate.format_sql=true
 server.port=9190
 
 management.endpoints.web.exposure.include=*
-#eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
-eureka.client.service-url.defaultZone=http://service-registry:8761/eureka/
+eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+#eureka.client.service-url.defaultZone=http://service-registry:8761/eureka/
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 
-#eureka.instance.hostname=localhost
-eureka.instance.hostname=service-registry
+eureka.instance.hostname=localhost
+#eureka.instance.hostname=service-registry
 
 #eureka.instance.prefer-ip-address=true
 #eureka.instance.instance-id=${spring.cloud.client.ip-address}:${server.port}
