--- a/department-service.properties
+++ b/department-service.properties
@@ -7,15 +7,15 @@
 
 # MySQL Properties
 #spring.datasource.url=jdbc:mysql://localhost:3306/department_db?createDatabaseIfNotExist=true
-spring.datasource.url=jdbc:mysql://mysqldb-department:3306/department_db?createDatabaseIfNotExist=true
-spring.datasource.username=department
-spring.datasource.password=department
+#spring.datasource.url=jdbc:mysql://mysqldb-department:3306/department_db?createDatabaseIfNotExist=true
+#spring.datasource.username=department
+#spring.datasource.password=department
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 #spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 #spring.sql.init.mode=always
