--- a/department-service.properties
+++ b/department-service.properties
@@ -1,35 +1,55 @@
-# Oracle Properties
+# Oracle Local Properties
 #spring.datasource.url=jdbc:oracle:thin:@localhost:1521:mydb
 #spring.datasource.username=department_db
 #spring.datasource.password=department_db!!
 #spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.sql.init.mode=always
+#spring.datasource.initialization-mode=always
 
-# MySQL Properties
+# MySQL Local Properties
 #spring.datasource.url=jdbc:mysql://localhost:3306/department_db?createDatabaseIfNotExist=true
-#spring.datasource.url=jdbc:mysql://mysqldb-department:3306/department_db?createDatabaseIfNotExist=true
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.sql.init.mode=always
+#spring.datasource.initialization-mode=always
+
+# MySQL Docker Properties
+#spring.datasource.url=jdbc:mysql://mysqldb:3307/department_db?autoReconnect=true&useSSL=false&createDatabaseIfNotExist=true
 #spring.datasource.username=department
 #spring.datasource.password=department
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-
 #spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 #spring.sql.init.mode=always
 #spring.datasource.initialization-mode=always
 
 server.port=9190
 
 management.endpoints.web.exposure.include=*
+
+# Localhost Property
 #eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+
+# Docker Property
 eureka.client.service-url.defaultZone=http://service-registry:8761/eureka/
+
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 
+# Localhost Property
 #eureka.instance.hostname=localhost
+
+# Docker Property
 eureka.instance.hostname=service-registry
 
 #eureka.instance.prefer-ip-address=true
