--- a/employee-service.properties
+++ b/employee-service.properties
@@ -1,19 +1,37 @@
-# Oracle Properties
+# Oracle Local Properties
 #spring.datasource.url=jdbc:oracle:thin:@localhost:1521:mydb
 #spring.datasource.username=employee_db
 #spring.datasource.password=employee_db!!
 #spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.sql.init.mode=always
+#spring.datasource.initialization-mode=always
 
-# MySQL Properties
-spring.datasource.url=jdbc:mysql://localhost:3306/employee_db
-spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+# MySQL Local Properties
+#spring.datasource.url=jdbc:mysql://localhost:3306/employee_db?createDatabaseIfNotExist=true
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.sql.init.mode=always
+#spring.datasource.initialization-mode=always
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+# MySQL Docker Properties
+#spring.datasource.url=jdbc:mysql://mysqldb-empdb:3308/employee_db?autoReconnect=true&useSSL=false&createDatabaseIfNotExist=true
+#spring.datasource.username=employee
+#spring.datasource.password=employee
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.sql.init.mode=always
+#spring.datasource.initialization-mode=always
 
 server.port=8081
 
