--- a/employee-service.properties
+++ b/employee-service.properties
@@ -35,7 +35,11 @@
 
 server.port=8081
 
-eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+# Localhost Property
+#eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+
+# Docker Property
+eureka.client.service-url.defaultZone=http://service-registry:8761/eureka/
 
 eureka.instance.hostname=localhost
 #eureka.instance.prefer-ip-address=true
