--- a/employee-service.properties
+++ b/employee-service.properties
@@ -41,7 +41,12 @@ server.port=8081
 # Docker Property
 eureka.client.service-url.defaultZone=http://service-registry:8761/eureka/
 
-eureka.instance.hostname=localhost
+# Localhost Property
+#eureka.instance.hostname=localhost
+
+# Docker Property
+eureka.instance.hostname=service-registry
+
 #eureka.instance.prefer-ip-address=true
 #eureka.instance.instance-id=${spring.cloud.client.ip-address}:${server.port}
 #eureka.instance.hostname=${spring.cloud.client.ip-address}
