--- a/organization-service.properties
+++ b/organization-service.properties
@@ -1,26 +1,52 @@
-# Oracle Properties
+# Oracle Local Properties
 #spring.datasource.url=jdbc:oracle:thin:@localhost:1521:mydb
 #spring.datasource.username=organization_db
 #spring.datasource.password=organization_db!!
 #spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.sql.init.mode=always
+#spring.datasource.initialization-mode=always
 
-# MySQL Properties
-spring.datasource.url=jdbc:mysql://localhost:3306/organization_db
-spring.datasource.username=root
-spring.datasource.password=root
-#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+# MySQL Local Properties
+#spring.datasource.url=jdbc:mysql://localhost:3306/organization_db?createDatabaseIfNotExist=true
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.sql.init.mode=always
+#spring.datasource.initialization-mode=always
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+# MySQL Docker Properties
+#spring.datasource.url=jdbc:mysql://mysqldb-orgdb:3309/organization_db?autoReconnect=true&useSSL=false&createDatabaseIfNotExist=true
+#spring.datasource.username=organization
+#spring.datasource.password=organization
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.sql.init.mode=always
+#spring.datasource.initialization-mode=always
 
 server.port=8083
 
-eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+# Localhost Property
+#eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 
-eureka.instance.hostname=localhost
+# Docker Property
+eureka.client.service-url.defaultZone=http://service-registry:8761/eureka/
+
+# Localhost Property
+#eureka.instance.hostname=localhost
+
+# Docker Property
+eureka.instance.hostname=service-registry
+
 #eureka.instance.prefer-ip-address=true
 #eureka.instance.instance-id=${spring.cloud.client.ip-address}:${server.port}
 #eureka.instance.hostname=${spring.cloud.client.ip-address}
