--- a/department-service.properties
+++ b/department-service.properties
@@ -22,7 +22,7 @@
 #spring.datasource.initialization-mode=always
 
 # MySQL Docker Properties
-#spring.datasource.url=jdbc:mysql://mysqldb:3307/department_db?autoReconnect=true&useSSL=false&createDatabaseIfNotExist=true
+#spring.datasource.url=jdbc:mysql://mysqldb-deptdb:3307/department_db?autoReconnect=true&useSSL=false&createDatabaseIfNotExist=true
 #spring.datasource.username=department
 #spring.datasource.password=department
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
