--- a/department-service.properties
+++ b/department-service.properties
@@ -60,7 +60,8 @@ spring.sleuth.sampler.probability=1.0
 #eureka.instance.hostname=localhost
 
 # Docker Eureka Server Property
-eureka.instance.hostname=service-registry
+#eureka.instance.hostname=service-registry
+eureka.instance.prefer-ip-address=true
 
 #eureka.instance.prefer-ip-address=true
 #eureka.instance.instance-id=${spring.cloud.client.ip-address}:${server.port}
