--- a/department-service.properties
+++ b/department-service.properties
@@ -25,7 +25,7 @@
 spring.datasource.url=jdbc:mysql://mysqldb-deptdb:3307/department_db?autoReconnect=true&useSSL=false&createDatabaseIfNotExist=true
 spring.datasource.username=department
 spring.datasource.password=department
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
