--- a/department-service.properties
+++ b/department-service.properties
@@ -22,19 +22,20 @@
 #spring.datasource.initialization-mode=always
 
 # MySQL Docker Properties
-spring.datasource.url=jdbc:mysql://mysqldb-deptdb:3307/department_db?autoReconnect=true&useSSL=false&createDatabaseIfNotExist=true
-spring.datasource.username=department
-spring.datasource.password=department
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.datasource.url=jdbc:mysql://mysqldb-deptdb:3307/department_db?autoReconnect=true&useSSL=false&createDatabaseIfNotExist=true
+#spring.datasource.username=department
+#spring.datasource.password=department
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 #spring.sql.init.mode=always
 #spring.datasource.initialization-mode=always
 
 #Rabbitmq Configurations
-spring.rabbitmq.host=rabbitmq
+#spring.rabbitmq.host=rabbitmq
+spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
@@ -44,16 +45,21 @@ server.port=9190
 management.endpoints.web.exposure.include=*
 
 # Localhost Property
-#eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 
 # Docker Property
-eureka.client.service-url.defaultZone=http://service-registry:8761/eureka/
+#eureka.client.service-url.defaultZone=http://service-registry:8761/eureka/
 
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 
 # Zipkin configurations
-spring.zipkin.base-url=http://zipkin:9411/
+#Localhost configuration
+#spring.zipkin.base-url=http://zipkin:9411/
+
+#Docker configuration
+spring.zipkin.base-url=http://127.0.0.1:9411/
+
 spring.sleuth.sampler.probability=1.0
 
 # Localhost Eureka Server Property
