--- a/department-service.properties
+++ b/department-service.properties
@@ -45,7 +45,7 @@ server.port=9190
 management.endpoints.web.exposure.include=*
 
 # Localhost Property
-eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
 # Docker Property
 #eureka.client.service-url.defaultZone=http://service-registry:8761/eureka/
