--- a/department-service.properties
+++ b/department-service.properties
@@ -23,14 +23,14 @@ spring.jpa.properties.hibernate.format_sql=true
 
 #Rabbitmq Configurations
 #spring.rabbitmq.host=rabbitmq
-#spring.rabbitmq.host=localhost
-#spring.rabbitmq.port=5672
-#spring.rabbitmq.username=guest
-#spring.rabbitmq.password=guest
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
 
 server.port=9190
 
-#management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=*
 
 # Localhost Property
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
@@ -38,17 +38,17 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 # Docker Property
 #eureka.client.service-url.defaultZone=http://service-registry:8761/eureka/
 
-#eureka.client.fetch-registry=true
-#eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
 
 # Zipkin configurations
 #Localhost configuration
-#spring.zipkin.base-url=http://zipkin:9411/
+spring.zipkin.base-url=http://zipkin:9411/
 
 #Docker configuration
 #spring.zipkin.base-url=http://127.0.0.1:9411/
 
-#spring.sleuth.sampler.probability=1.0
+spring.sleuth.sampler.probability=1.0
 
 # Docker Eureka Server Property
 eureka.instance.hostname=localhost
