--- a/department-service.properties
+++ b/department-service.properties
@@ -22,40 +22,27 @@ spring.jpa.properties.hibernate.format_sql=true
 #spring.datasource.initialization-mode=always
 
 #Rabbitmq Configurations
-#spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
+# Eureka configurations
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+eureka.instance.hostname=localhost
+
+# Zipkin configurations
+spring.zipkin.base-url=http://127.0.0.1:9411/
+spring.sleuth.sampler.probability=1.0
+
 server.port=9190
 
 management.endpoints.web.exposure.include=*
 
-# Localhost Property
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-
-# Docker Property
-#eureka.client.service-url.defaultZone=http://service-registry:8761/eureka/
-
-eureka.client.fetch-registry=true
-eureka.client.register-with-eureka=true
-
-# Zipkin configurations
-#Localhost configuration
-spring.zipkin.base-url=http://zipkin:9411/
-
-#Docker configuration
-#spring.zipkin.base-url=http://127.0.0.1:9411/
-
-spring.sleuth.sampler.probability=1.0
-
-# Docker Eureka Server Property
-eureka.instance.hostname=localhost
-#eureka.instance.prefer-ip-address=true
+spring.boot.message = Hello, Department Service Spring Cloud BUS Demo
 
 #eureka.instance.prefer-ip-address=true
 #eureka.instance.instance-id=${spring.cloud.client.ip-address}:${server.port}
 #eureka.instance.hostname=${spring.cloud.client.ip-address}
-
-spring.boot.message = Hello, Department Service Spring Cloud BUS Demo
