--- a/department-service.properties
+++ b/department-service.properties
@@ -1,23 +1,23 @@
 # Oracle Local Properties
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:mydb
-spring.datasource.username=department_db
-spring.datasource.password=department_db!!
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:mydb
+#spring.datasource.username=department_db
+#spring.datasource.password=department_db!!
+#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 #spring.sql.init.mode=always
 #spring.datasource.initialization-mode=always
 
 # MySQL Local Properties
-#spring.datasource.url=jdbc:mysql://localhost:3306/department_db?createDatabaseIfNotExist=true
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.url=jdbc:mysql://localhost:3306/department_db?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 #spring.sql.init.mode=always
 #spring.datasource.initialization-mode=always
 
