--- a/department-service.properties
+++ b/department-service.properties
@@ -18,6 +18,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 #spring.sql.init.mode=always
 #spring.datasource.initialization-mode=always
 
