--- a/department-service.properties
+++ b/department-service.properties
@@ -41,7 +41,7 @@ server.port=9190
 
 management.endpoints.web.exposure.include=*
 
-spring.boot.message = Hello, Department Service Spring Cloud BUS Demo Newbbbb
+spring.boot.message = Hello, Department Service Spring Cloud BUS
 
 #eureka.instance.prefer-ip-address=true
 #eureka.instance.instance-id=${spring.cloud.client.ip-address}:${server.port}
