--- a/employee-service.properties
+++ b/employee-service.properties
@@ -33,6 +33,15 @@ eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 eureka.instance.hostname=localhost
 
+# Kafka Properties
+employee.topic.name=employee_notification_topic
+employee.topic.group.id=employee_notification_group_id
+
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.properties.spring.json.type.mapping=event:net.javaguides.employeeservice.notification.EmployeeCreateEvent
+
 # Zipkin configurations
 spring.zipkin.base-url=http://127.0.0.1:9411/
 spring.sleuth.sampler.probability=1.0
